--- a/builds/angular/index.html
+++ b/builds/angular/index.html
@@ -3,47 +3,14 @@
 <head>
 	<title>Angular</title>
 	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular/angular-route.min.js"></script>
+
+	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="main" ng-controller = "MyController">
-
-	<div class="search">
-		<h1>Artist Directory</h1>
-		<label>search: </label>
-		<input ng-model="query" placeholder="Search for artists" autofocus="">
-
-		<label class="formgroup">by:
-			<select ng-model="artistOrder">
-				<option value="name">Name</option>
-				<option value="reknown">Reknown</option>
-			</select>
-		</label>
-
-		<label class="formgroup">
-			<input type="radio" ng-model="direction" name="direction" checked> ascending
-			</input>
-		</label>
-		<label class="formgroup">
-			<input type="radio" ng-model="direction" name="direction" value="reverse"> decending
-			</input>
-		</label>
-	</div>
-	
-
-
-	<ul class="artistlist">
-		<li class="artist cf" ng-repeat="item in artists | filter:query | orderBy:artistOrder:direction">
-			<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Phote of {{item.name}}">
-			<div class="info">
-				<h2>{{item.name}}</h2>
-				<h3>{{item.reknown}}</h3>
-
-			</div>
-		</li>
-	</ul>
-</div>
+<div class="main" ng-view></div>
 
 </body>
 </html>
