--- a/builds/angular/index.html
+++ b/builds/angular/index.html
@@ -4,6 +4,7 @@
 	<title>Angular</title>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.min.js"></script>
+	<script src="lib/angular/angular-animate.min.js"></script>
 
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
